# fabcar-chaincode-rust

./: Cargo.toml  README.md
src/: car.rs  carqueryresult.rs  fabcar.rs  lib.rs
src/fabcar/: wassup.rs
