[package]
name = "fabcar-rust"
version = "0.1.0"
authors = ["James Taylor <jamest@uk.ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
fabric_contract = { git = "https://github.com/hyperledgendary/fabric-contract-api-rust", branch = "master" }
# TODO these are required for the fabric_contract macros???
log = "0.4.8"
wapc-guest = "0.3.1"
